Add data sections

--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -231,15 +231,27 @@ title: "Average weekly earnings"
           </ul>
 
           <h2 id="data" class="margin-top--7">Average weekly earnings data</h2>
+          <ul class="list--neutral padding-left--0">
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsearn01">EARN01: Average Weekly Earnings</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p>Average Weekly Earnings (AWE), seasonally adjusted. This spreadsheet includes the headline estimates of earnings growth based on the Monthly Wages and Salaries Survey.</p>
+            </li>
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbysectorearn02">EARN02: Average Weekly Earnings by sector</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p>Average weekly earnings by sector (Monthly Wages and Salaries Survey).</p>
+            </li>
+          </ul>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/august2018/relateddata">View all data</a></p>
+
+
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
               <span class="summary">Where to find data about average weekly earnings</span>
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
-              <p>Estimates of average weekly earnings in nominal terms: datasets <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsearn01">EARN01</a>, <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbysectorearn02">EARN02</a> and <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbyindustryearn03">EARN03</a>.</p>
-              <p>Estimates of average weekly earnings in real terms: <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsearn01">dataset EARN01</a>.</p>
-              <p>Modelled estimates of average weekly earnings in nominal terms back to 1963: <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbysectorearn02">dataset EARN02</a>.</p>
+              <p>Estimates of average weekly earnings by industry in dataset: <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbyindustryearn03">EARN03</a>.</p>
               <p>Historic estimates published by the Bank of England: <a href="https://www.bankofengland.co.uk/statistics/research-datasets">A millennium of macroeconomic data version 3.1</a> (worksheets A47 and A48).</p>
             </div>
           </details>
