--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -254,14 +254,27 @@ title: "Employment"
 
           <h2 id="data" class="margin-top--7">Employment data</h2>
             <p>Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</p>
-          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/august2018/relateddata">View all data</a></p>
+            <ul class="list--neutral padding-left--0">
+              <li class="margin-bottom--4">
+                <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/employmentunemploymentandeconomicinactivityforpeopleaged16andoverandagedfrom16to64seasonallyadjusteda02sa">A02 SA: Employment, unemployment and economic inactivity for people aged 16 and over and aged from 16 to 64 (seasonally adjusted)</a></p>
+                <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+                <p>Labour Force Survey summary. This table shows the headline employment, unemployment and inactivity series (seasonally adjusted).</p>
+              </li>
+              <li class="margin-bottom--4">
+                <p class="margin-bottom--1"><a class="heading-small" href="http://127.0.0.1:4000/sprint/3/labour-market/summary-table/">Labour market status by age group</a></p>
+                <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+                <p>Summary table of labour market status by age group.</p>
+              </li>
+            </ul>
+            <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/august2018/relateddata">View all data</a></p>
+
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
               <span class="summary">Where to find data about employment</span>
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
               <ul>
-                <li>Employment estimates are available at <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/employmentunemploymentandeconomicinactivityforpeopleaged16andoverandagedfrom16to64seasonallyadjusteda02sa">datasets A02 SA</a> and <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/fulltimeparttimeandtemporaryworkersseasonallyadjustedemp01sa">EMP01 SA</a>.</li>
+                <li>Employment estimates are available at <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/fulltimeparttimeandtemporaryworkersseasonallyadjustedemp01sa">EMP01 SA</a>.</li>
                 <li>Estimates of employment UK and non-UK workers are available at <a href="#">Non-UK workers in the labour market</a> and at <a href="#">datasets A12</a> and <a href="#">EMP06</a>.</li>
                 <li>International comparisons of employment rates are available at dataset A10.</li>
               </ul>
