--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -322,8 +322,23 @@ title: "Labour market"
           </div>
 
           <h2 id="data" class="margin-top--7">Labour market data</h2>
-            <p>Labour market estimates from the Labour Force Survey (LFS), a survey of households.</p>
+
+          <ul class="list--neutral padding-left--0">
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/summaryoflabourmarketstatistics">A01: Summary of labour market statistics</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p>Labour market statistics summary data tables.</p>
+            </li>
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/datasets/nsaemploymentunemploymentandeconomicinactivityforpeopleaged16andoverandagedfrom16to64a02">A02 NSA: Employment, unemployment and economic inactivity for people aged 16 and over and aged from 16 to 64 (not seasonally adjusted)</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p>Labour Force Survey summary. Shows the headline employment, unemployment and inactivity series (not seasonally adjusted).</p>
+            </li>
+          </ul>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/august2018/relateddata">View all data</a></p>
+
+
+
 
           <h2 id="using-data" class="margin-top--7">Using labour market data</h2>
           <div class="js-show-hide">
