--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -243,14 +243,27 @@ title: "Unemployment"
           </ul>
 
           <h2 id="data" class="margin-top--7">Unemployment data</h2>
+          <ul class="list--neutral padding-left--0">
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment/datasets/unemploymentbyageanddurationseasonallyadjustedunem01sa">UNEM01 SA: Unemployment by age and duration (seasonally adjusted)</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p>Unemployment by age and duration (seasonally adjusted). These estimates are sourced from the Labour Force Survey, a survey of households.</p>
+            </li>
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="http://127.0.0.1:4000/sprint/3/labour-market/summary-table/">Labour market status by age group</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
+              <p>Summary table of labour market status by age group.</p>
+            </li>
+          </ul>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/august2018/relateddata">View all data</a></p>
+
+
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
               <span class="summary">Where to find data about unemployment</span>
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
               <ul>
-                <li>Unemployment estimates for the UK: <a href="http://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment/datasets/unemploymentbyageanddurationseasonallyadjustedunem01sa">dataset UNEM01 SA</a>.</li>
                 <li>Estimates of employment UK and non-UK workers: <a href="#">Non-UK workers in the labour market</a> and at <a href="#">datasets A12</a> and <a href="#">EMP06</a>.</li>
                 <li>Historic estimates of unemployment are published by the Bank of England: <a href="https://www.bankofengland.co.uk/statistics/research-datasets">A millennium of macroeconomic data version 3.1</a> (in worksheets A49 and A50).</li>
                 <li>International comparisons of employment rates: dataset A10.</li>
