Fix summary table link

--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -250,7 +250,7 @@ title: "Unemployment"
               <p>Unemployment by age and duration (seasonally adjusted). These estimates are sourced from the Labour Force Survey, a survey of households.</p>
             </li>
             <li class="margin-bottom--4">
-              <p class="margin-bottom--1"><a class="heading-small" href="http://127.0.0.1:4000/sprint/3/labour-market/summary-table/">Labour market status by age group</a></p>
+              <p class="margin-bottom--1"><a class="heading-small" href="../summary-table">Labour market status by age group</a></p>
               <p class="font-xsmall margin-bottom--1">Released: 14 August 2018</p>
               <p>Summary table of labour market status by age group.</p>
             </li>
