--- a/prototypes.html
+++ b/prototypes.html
@@ -14,14 +14,15 @@ footer: false
       <h1>Prototypes</h1>
 
       <h2 class="margin-bottom--0">Sprint 3 - latest</h2>
-      <p>13 September 2018 to 26 September</p>
+      <p>13 September 2018 to 26 September 2018</p>
 
       <h3>Labour market</h3>
       <ul>
         <li><a href="sprint/3/labour-market/overview">Labour market overview</a></li>
         <li><a href="sprint/3/labour-market/employment">Employment</a></li>
         <li><a href="sprint/3/labour-market/unemployment">Unemployment</a></li>
-        <li><a href="sprint/3/labour-market/average-weekly-earnings">Avergare weekly earnings</a></li>
+        <li><a href="sprint/3/labour-market/average-weekly-earnings">Average weekly earnings</a></li>
+        <li><a href="sprint/3/labour-market/summary-table">Summary table</a></li>
       </ul>
 
       <h2 class="margin-bottom--0">Sprint 2</h2>
