--- a/prototypes.html
+++ b/prototypes.html
@@ -13,7 +13,20 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
-      <h2 class="margin-bottom--0">Sprint 3 - latest</h2>
+      <h2 class="margin-bottom--0">Sprint 4 - latest</h2>
+      <p>27 September 2018 to 26 September 2018</p>
+
+      <h3>Labour market</h3>
+      <ul>
+        <li><a href="sprint/4/labour-market/overview">Labour market overview</a></li>
+        <li><a href="sprint/4/labour-market/employment">Employment</a></li>
+        <li><a href="sprint/4/labour-market/unemployment">Unemployment</a></li>
+        <li><a href="sprint/4/labour-market/average-weekly-earnings">Average weekly earnings</a></li>
+        <li><a href="sprint/4/labour-market/summary-table">Summary table</a></li>
+        <li><a href="sprint/4/labour-market/view-data">View data used in this bulletin (filtered for employment)</a></li>
+      </ul>
+
+      <h2 class="margin-bottom--0">Sprint 3</h2>
       <p>13 September 2018 to 26 September 2018</p>
 
       <h3>Labour market</h3>
