Change page names to be view data employment and view data unemployment

--- a/prototypes.html
+++ b/prototypes.html
@@ -23,7 +23,8 @@ footer: false
         <li><a href="sprint/4/labour-market/unemployment">Unemployment</a></li>
         <li><a href="sprint/4/labour-market/average-weekly-earnings">Average weekly earnings</a></li>
         <li><a href="sprint/4/labour-market/summary-table">Summary table</a></li>
-        <li><a href="sprint/4/labour-market/view-data">View data used in this bulletin (filtered for employment)</a></li>
+        <li><a href="sprint/4/labour-market/view-data-employment">View data used in this bulletin (filtered for employment)</a></li>
+        <li><a href="sprint/4/labour-market/view-data-unemployment">View data used in this bulletin (filtered for unemployment)</a></li>
       </ul>
 
       <h2 class="margin-bottom--0">Sprint 3</h2>
