--- a/sprint/4/labour-market/view-data-unemployment/index.html
+++ b/sprint/4/labour-market/view-data-unemployment/index.html
@@ -50,7 +50,7 @@ title: "Labour market data"
           <div class="wrapper">
             <div class="col-wrap">
               <div class="col col--md-three-quarters col--lg-three-quarters">
-                <p> Showing data for '<strong>employment</strong>' (30 results)</p>
+                <p> Showing data for '<strong>unemployment</strong>' (30 results)</p>
               </div>
 
               <!-- Sort by filter - turned off for now -->
@@ -79,14 +79,14 @@ title: "Labour market data"
                         <div class="checkbox-group">
 
                           <div class="checkbox">
-                            <input type="checkbox" class="checkbox__input js-filter" id="id-All" name="0" value="Employment" checked="Y">
+                            <input type="checkbox" class="checkbox__input js-filter" id="id-All" name="0" value="Employment">
                             <label class="checkbox__label font-size--16" for="id-All">
                               Employment
                             </label>
                           </div>
 
                           <div class="checkbox">
-                            <input type="checkbox" class="checkbox__input js-filter" id="id-Female" name="2" value="Unemployment">
+                            <input type="checkbox" class="checkbox__input js-filter" id="id-Female" name="2" value="Unemployment" checked="Y">
                             <label class="checkbox__label font-size--16" for="id-Female">
                               Unemployment
                             </label>
