--- a/sprint/4/labour-market/employment/index.html
+++ b/sprint/4/labour-market/employment/index.html
@@ -266,7 +266,7 @@ title: "Employment"
                 <p>Summary table of labour market status by age group.</p>
               </li>
             </ul>
-            <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="../view-data">View all data</a></p>
+            <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="../view-data-employment">View all data</a></p>
 
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
