Update the view data screen to use average weekly earnings instead of unemployment

--- a/sprint/4/labour-market/average-weekly-earnings/index.html
+++ b/sprint/4/labour-market/average-weekly-earnings/index.html
@@ -243,7 +243,7 @@ title: "Average weekly earnings"
               <p>Average weekly earnings by sector (Monthly Wages and Salaries Survey).</p>
             </li>
           </ul>
-          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/august2018/relateddata">View all data</a></p>
+          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="../view-data-average-weekly-earnings">View all data</a></p>
 
 
           <details role="group" class="margin-bottom--4 margin-top--1">
