--- a/sprint/4/labour-market/unemployment/index.html
+++ b/sprint/4/labour-market/unemployment/index.html
@@ -255,7 +255,7 @@ title: "Unemployment"
               <p>Summary table of labour market status by age group.</p>
             </li>
           </ul>
-          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="../view-data-unemployment">View all data</a></p>
+          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/september2018/relateddata?sortBy=relevance&query=unemployment&size=10">View all data</a></p>
 
 
           <details role="group" class="margin-bottom--4 margin-top--1">
