--- a/sprint/4/labour-market/view-data-average-weekly-earnings/index.html
+++ b/sprint/4/labour-market/view-data-average-weekly-earnings/index.html
@@ -30,7 +30,7 @@ title: "Labour market data"
                   <a class="breadcrumb__link" href="../overview">Labour market</a>
                 </li>
                 <li class="breadcrumb__item">
-                  <a class="breadcrumb__link" href="../employment">Employment</a>
+                  <a class="breadcrumb__link" href="../average-weekly-earnings">Average weekly earnings</a>
                 </li>
                 <li class="breadcrumb__item">
                   Labour market data
@@ -50,7 +50,7 @@ title: "Labour market data"
           <div class="wrapper">
             <div class="col-wrap">
               <div class="col col--md-three-quarters col--lg-three-quarters">
-                <p> Showing data for '<strong>unemployment</strong>' (30 results)</p>
+                <p> Showing data for '<strong>average weekly earnings</strong>' (15 results)</p>
               </div>
 
               <!-- Sort by filter - turned off for now -->
@@ -70,69 +70,50 @@ title: "Labour market data"
                 <div class="col col--md-one-third col--lg-one-third">
                   <div class="content-box padding-left-md--1 padding-right-md--1">
 
-                    <a class="float-right font-xsmall" style="margin-top:25px;" href="#">
-                      Clear
-                    </a>
-                    <p class="heading-small">Refine results</p>
-
-                      <fieldset class="margin-bottom--2">
-                        <div class="checkbox-group">
-
-                          <div class="checkbox">
-                            <input type="checkbox" class="checkbox__input js-filter" id="id-All" name="0" value="Employment">
-                            <label class="checkbox__label font-size--16" for="id-All">
+<!-- Checkboxes in the refine by section - turned off for now -->
+                    <!-- <div>
+                      <fieldset>
+                        <legend class="font-medium">
+                          Refine results by
+                        </legend>
+                        <div>
+                          <div>
+                            <input type="checkbox">
+                            <label class="font-small">
                               Employment
                             </label>
                           </div>
-
-                          <div class="checkbox">
-                            <input type="checkbox" class="checkbox__input js-filter" id="id-Female" name="2" value="Unemployment" checked="Y">
-                            <label class="checkbox__label font-size--16" for="id-Female">
+                          <div>
+                            <input type="checkbox">
+                            <label class="font-small">
                               Unemployment
                             </label>
                           </div>
-
-                          <div class="checkbox">
-                            <input type="checkbox" class="checkbox__input js-filter" id="id-Male" name="1" value="Average weekly earnings">
-                            <label class="checkbox__label font-size--16" for="id-Male">
+                          <div>
+                            <input type="checkbox">
+                            <label class="font-small">
                               Average weekly earnings
                             </label>
                           </div>
-
-                          <div class="checkbox">
-                            <input type="checkbox" class="checkbox__input js-filter" id="id-Male" name="1" value="Public and private sector employment">
-                            <label class="checkbox__label font-size--16" for="id-Male">
-                              Public and private sector employment
+                          <div>
+                            <label class="font-small">
+                              Other keyword
                             </label>
+                            <input type="search">
                           </div>
-
-                          <div class="checkbox">
-                            <input type="checkbox" class="checkbox__input js-filter" id="id-Male" name="1" value="Actual hours worked">
-                            <label class="checkbox__label font-size--16" for="id-Male">
-                              Actual hours worked
-                            </label>
-                          </div>
-
                         </div>
                       </fieldset>
+                    </div> -->
 
 
-
-
-                      <!-- Free text boxes -->
-                      <!-- <div class="padding-bottom--1">
-                        <label class="font-small">
-                          Other keyword
-                        </label>
-                        <input type="search">
-                      </div>
-                    </div>
-
+                    <a class="btn btn--primary font-xsmall link--no-underline float-right" style="margin-top:20px;" href="#">
+                      Clear
+                    </a>
+                    <p class="heading-small">Refine results</p>
                     <p style="margin-bottom:0px">Contains</p>
                     <div style="padding-bottom:16px;">
-                    <input type="search" class="input" value="employment"> -->
-
-
+                    <input type="search" class="input" value="average weekly earnings">
+                    </div>
                   </div>
 
                 <div class="content-box padding-left-md--1 padding-right-md--1">
@@ -145,105 +126,107 @@ title: "Labour market data"
                 <div class="col col--md-two-thirds col--lg-two-thirds">
                   <ul class="list--neutral margin-top--4 padding-left--0">
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">A01: Summary of labour market statistics</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">EARN01: <strong>Average Weekly Earnings</strong></a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
                           Released on 11 September 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1">Labour market statistics summary data tables</p>
-                      <p class="font-xsmall">Keywords: <strong>employment</strong>, jobs, un<strong>employment</strong>,	claimant count, benefits,	redundancies, economic inactivity, earnings, labour disputes, vacancies</p>
+                      <p>Average Weekly Earnings (AWE), seasonally adjusted. This spreadsheet includes the headline estimates of earnings growth based on the Monthly Wages and Salaries Survey.</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">EMP04: <strong>Employment</strong> by occupation</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">EARN03: <strong>Average weekly earnings</strong> by industry</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
                           Released on 11 September 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1">Employment by Occupation. This spreadsheet is usually published once a year in August and provides a detailed snapshot of employment by occupation, broken down by sex. These estimates are sourced from the Labour Force Survey, a survey of households.</p>
+                      <p class="font-xsmall margin-bottom--1"><strong>Average weekly earnings</strong> by industry (Monthly Wages and Salaries Survey).</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">EMP08: All in <strong>employment</strong> by occupation</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">EARN02: <strong>Average Weekly Earnings</strong> by sector</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
                           Released on 11 September 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1">All in employment by occupation. This table is published four times a year in February, May, August and November. A more detailed employment by occupation spreadsheet, published once a year, is available at Table EMP04.</p>
+                      <p class="font-xsmall margin-bottom--1"><strong>Average weekly earnings</strong> by sector (Monthly Wages and Salaries Survey).</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">EMP13: <strong>Employment</strong> by industry</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#"><strong>Average Weekly Earnings</strong> time series dataset</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
+                          Dataset ID: EMP
+                          |
                           Released on 11 September 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1"><strong>Employment</strong> by industry (Labour Force Survey). This table is updated four times a year in February, May, August and November.</p>
+                      <p class="font-xsmall margin-bottom--1">This dataset contains series for <strong>Average Weekly Earnings</strong> (AWE).</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">JOBS04: Self-<strong>employment</strong> jobs by industry</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">X04: <strong>Average Weekly Earnings</strong> Supplementary Analysis</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
-                          Released on 11 September 2018
+                          Released on 16 March 2016
                         </font>
-                      <p class="font-xsmall margin-bottom--1">Self-<strong>employment</strong> jobs by industry. This table is usually updated in March, June, September and December.</p>
+                      <p class="font-xsmall margin-bottom--1">The estimates of real <strong>earnings</strong>, which used to be published at dataset X04 are now available at dataset EARN01. Dataset X04 has therefore been discontinued.</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">EMP03: Public sector <strong>employment</strong> by industry</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">EARN07: Gross <strong>weekly earnings</strong> by industry</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
-                          Released on 11 September 2018
+                          Released on 14 August 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1">Public sector <strong>employment</strong> by industry. This table is updated in March, June, September and December.</p>
+                      <p class="font-xsmall margin-bottom--1">Gross <strong>weekly earnings</strong> by industry (Labour Force Survey). This table is usually updated four times a year in February, May, August and November.</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">EMP05: <strong>Employment</strong> rate revisions triangle</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">EARN06: Gross <strong>weekly earnings</strong> by occupation</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
-                          Released on 11 September 2018
+                          Released on 14 August 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1"><strong>Employment</strong> rate revisions triangle. These estimates are sourced from the Labour Force Survey, a survey of households.</p>
+                      <p class="font-xsmall margin-bottom--1">Gross </strong>weekly earnings</strong> by occupation (Labour Force Survey). This table is usually updated four times a year in February, May, August and November.</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">EMP11: <strong>Employment</strong> by socio-economic classification</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">EARN04: Gross <strong>weekly earnings</strong> of full-time employees</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
-                          Released on 11 September 2018
+                          Released on 14 August 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1"><strong>Employment</strong> by socio-economic classification. It is usually updated four times a year in February, May, August and November.</p>
+                      <p class="font-xsmall margin-bottom--1">Gross <strong>weekly earnings</strong> of full-time employees (Labour Force Survey). This table is usually updated four times a year in February, May, August and November.</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">EMP02: Public and private sector <strong>employment</strong></a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">EARN05: Gross <strong>weekly earnings</strong> of full-time employees by region</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
-                          Released on 11 September 2018
+                          Released on 14 August 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1">Public and private sector <strong>employment</strong>. This table is usually updated in March, June, September and December.</p>
+                      <p class="font-xsmall margin-bottom--1">Gross <strong>weekly earnings</strong> of full-time employees by region (Labour Force Survey). This table is usually updated four times a year in February, May, August and November.</p>
                     </li>
                     <li class="margin-bottom--4">
-                      <p class="margin-bottom--0"><a class="font-small" href="#">EMP06: <strong>Employment</strong> by country of birth and nationality</a></p>
+                      <p class="margin-bottom--0"><a class="font-small" href="#">HOUR03: <strong>Average hours</strong> worked by industry</a></p>
                       <p class="font-xsmall margin-bottom--1">
                         <font color="#0F8243">
                           Dataset
                           |
-                          Released on 11 September 2018
+                          Released on 14 August 2018
                         </font>
-                      <p class="font-xsmall margin-bottom--1"><strong>Employment</strong> levels and rates by country of birth and nationality. These estimates are usually updated in February, May, August and November.</p>
+                      <p class="font-xsmall margin-bottom--1"><strong>Average</strong> hours worked by industry. This table is updated four times a year in February, May, August and November. These estimates are sourced from the Labour Force Survey, a survey of households.
+                      </p>
                     </li>
                   </ul>
 
