--- a/sprint/4/page-header/index.html
+++ b/sprint/4/page-header/index.html
@@ -12,6 +12,9 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
 ---
 
 <style>
+.prototype .header-meta p {
+  border-right:none;
+}
 
 </style>
 
@@ -54,7 +57,7 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 font-medium">{{ page.title }}</p>
+          <p class="margin-top--1 font-medium">{{ page.summary }}</p>
         </div>
       </div>
     </div>
@@ -63,16 +66,14 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <div class="back">
-            <p class="font-xsmall">
-              This is the latest release. <a href="#" class="astral-link font-xsmall">View previous releases</a></p>
-          </div>
+            <p class="font-xsmall margin-bottom--4">
+              <span class="border-left--matisse background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">This is the latest release. <a href="#" class="font-xsmall">View previous releases</a></span></p>
         </div>
       </div>
     </div>
 
     <!-- release information -->
-    <div class=" border-top--darkastral background--astraldark-transparent">
+    <div class="">
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-quarter col--lg-one-third header-meta">
