--- a/sprint/4/page-header/index.html
+++ b/sprint/4/page-header/index.html
@@ -78,13 +78,13 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
         <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-quarter col--lg-one-third header-meta">
             <img class="meta__image" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="This is an accredited national statistic">
-            <p class="font-xxsmall">Contact:<br><a href="#" class="astral-link font-weight--normal font-xxsmall">Roger Smith</a></p>
+            <p class="font-xxsmall"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall">Roger Smith</a></p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release date:<br>14 August 2018</p>
+            <p class="font-xxsmall"><strong>Release date:</strong><br>14 August 2018</p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release frequency:<br>Monthly</p>
+            <p class="font-xxsmall"><strong>Next release:</strong><br>To be announced</p>
           </div>
         </div>
       </div>
