Tweaking typography and spacing

--- a/prototypes.html
+++ b/prototypes.html
@@ -27,6 +27,11 @@ footer: false
         <li><a href="sprint/4/labour-market/view-data-employment">View data used in this bulletin (filtered for employment)</a></li>
       </ul>
 
+      <h3>Patterns</h3>
+      <ul>
+        <li><a href="sprint/4/page-header">Page header</a></li>
+      </ul>
+
       <h2 class="margin-bottom--0">Sprint 3</h2>
       <p>13 September 2018 to 26 September 2018</p>
 
