--- a/sprint/4/page-header/index.html
+++ b/sprint/4/page-header/index.html
@@ -13,6 +13,10 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
 
 <style>
 
+.summary {
+  max-width: 38em;
+}
+
 .meta__image {
   float: none;
 }
@@ -22,7 +26,6 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
     float: left;
   }
 }
-
 
 .prototype .header-meta p {
   border-right:none;
@@ -69,7 +72,7 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
       <div class="col-wrap">
         <div class="col col--md-one col--lg-one">
           <h1 class="font-color--white margin-top-md--2 margin-bottom-sm--2 margin-bottom-md--2">{{ page.title }}</h1>
-          <p class="font-color--white margin-top-sm--2 margin-top-md--2 margin-bottom-sm--3 margin-bottom-md--3 font-medium">{{ page.summary }}</p>
+          <p class="summary font-color--white margin-top-sm--2 margin-top-md--2 margin-bottom-sm--3 margin-bottom-md--3 font-medium">{{ page.summary }}</p>
         </div>
       </div>
     </div>
@@ -78,7 +81,7 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <div style="display: inline-block" class="margin-bottom-sm--3 margin-bottom-md--1 border-left--matisse background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">
+          <div style="display: inline-block" class="margin-bottom-sm--2 margin-bottom-md--1 border-left--matisse background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">
             <p class="font-xsmall margin-bottom--0">This is the latest release. <a href="#" class="font-xsmall">View previous releases</a></span></p>
             </div>
         </div>
@@ -91,13 +94,13 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
         <div class="col-wrap header-meta-wrap margin-bottom-sm--2 margin-bottom-md--1">
           <div class="col col--md-one-third col--lg-one-third header-meta">
             <img class="meta__image" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="This is an accredited national statistic.">
-            <p class="font-xxsmall"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
+            <p class="font-xxsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall"><strong>Release date:</strong><br>14 August 2018</p>
+            <p class="font-xxsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall"><strong>Next release:</strong><br>To be announced</p>
+            <p class="font-xxsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
           </div>
         </div>
       </div>
