Tidy up chevron icons

--- a/sprint/4/page-header/index.html
+++ b/sprint/4/page-header/index.html
@@ -52,7 +52,7 @@ summary: "Data on levels, distribution and make-up of earnings and hours worked 
                   <a class="breadcrumb__link astral-link" href="#">People in work</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="#">Labour market</a>
+                  <a class="breadcrumb__link astral-link" href="#">Earnings and working hours</a>
                 </li>
                 <!-- <li class="breadcrumb__item">
                   {{ page.title }}
